apps/goatlint/src/snapshots/fixtures__cli__output_formatter_diagnostic_--format=default --report-unused-disable-directives disable-directive.js@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: --format=default --report-unused-disable-directives disable-directive.js
working directory: fixtures/cli/output_formatter_diagnostic
----------

  ! Unused eslint-disable directive (no problems were reported).
    ,-[disable-directive.js:9:1]
  8 | 
  9 | // eslint-disable-next-line no-debugger
    : ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 10 | const foo = 3;
    `----

  ! Unused eslint-disable directive (no problems were reported).
    ,-[disable-directive.js:12:1]
 11 | 
 12 | // goatlint-disable-next-line no-debugger
    : ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 13 | const bar = 3;
    `----

  ! Unused eslint-disable directive (no problems were reported).
    ,-[disable-directive.js:15:1]
 14 | 
 15 | // goatlint-disable-next-line eslint/no-debugger
    : ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 16 | const baz = 3;
    `----

Found 3 warnings and 0 errors.
Finished in <variable>ms on 1 file with 2 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
