apps/goatlint/src/snapshots/fixtures__cli__output_formatter_diagnostic_--format=default test.js@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: --format=default test.js
working directory: fixtures/cli/output_formatter_diagnostic
----------

  ! eslint(no-unused-vars): Function 'foo' is declared but never used.
   ,-[test.js:1:10]
 1 | function foo(a, b) {
   :          ^|^
   :           `-- 'foo' is declared here
 2 |     return a;
   `----
  help: Consider removing this declaration.

  ! eslint(no-unused-vars): Parameter 'b' is declared but never used. Unused parameters should start with a '_'.
   ,-[test.js:1:17]
 1 | function foo(a, b) {
   :                 |
   :                 `-- 'b' is declared here
 2 |     return a;
   `----
  help: Consider removing this parameter.

  x eslint(no-debugger): `debugger` statement is not allowed
   ,-[test.js:5:1]
 4 | 
 5 | debugger;
   : ^^^^^^^^^
   `----
  help: Remove the debugger statement

Found 2 warnings and 1 error.
Finished in <variable>ms on 1 file with 2 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
