apps/goatlint/src/snapshots/fixtures__cli__output_formatter_diagnostic_--format=github --report-unused-disable-directives disable-directive.js@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: --format=github --report-unused-disable-directives disable-directive.js
working directory: fixtures/cli/output_formatter_diagnostic
----------
::warning file=disable-directive.js,line=9,endLine=9,col=1,endColumn=40,title=goatlint::Unused eslint-disable directive (no problems were reported).
::warning file=disable-directive.js,line=12,endLine=12,col=1,endColumn=40,title=goatlint::Unused eslint-disable directive (no problems were reported).
::warning file=disable-directive.js,line=15,endLine=15,col=1,endColumn=47,title=goatlint::Unused eslint-disable directive (no problems were reported).

Found 3 warnings and 0 errors.
----------
CLI result: LintSucceeded
----------
