apps/goatlint/src/snapshots/fixtures__cli__output_formatter_diagnostic_--format=github ok.js@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: --format=github ok.js
working directory: fixtures/cli/output_formatter_diagnostic
----------
Found 0 warnings and 0 errors.
----------
CLI result: LintSucceeded
----------
