apps/goatlint/src/snapshots/fixtures__cli__output_formatter_diagnostic_--format=github parser-error.js@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: --format=github parser-error.js
working directory: fixtures/cli/output_formatter_diagnostic
----------
::error file=parser-error.js,line=3,endLine=3,col=9,endColumn=10,title=goatlint::Expected `;` but found `:`

Found 0 warnings and 1 error.
----------
CLI result: LintFoundErrors
----------
