apps/goatlint/src/snapshots/fixtures__cli__output_formatter_diagnostic_--format=github test.js@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: --format=github test.js
working directory: fixtures/cli/output_formatter_diagnostic
----------
::error file=test.js,line=5,endLine=5,col=1,endColumn=10,title=eslint(no-debugger)::`debugger` statement is not allowed
::warning file=test.js,line=1,endLine=1,col=10,endColumn=13,title=eslint(no-unused-vars)::Function 'foo' is declared but never used.
::warning file=test.js,line=1,endLine=1,col=17,endColumn=18,title=eslint(no-unused-vars)::Parameter 'b' is declared but never used. Unused parameters should start with a '_'.

Found 2 warnings and 1 error.
----------
CLI result: LintFoundErrors
----------
