apps/goatlint/src/snapshots/fixtures__cli__output_formatter_diagnostic_--format=gitlab ok.js@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: --format=gitlab ok.js
working directory: fixtures/cli/output_formatter_diagnostic
----------
[]----------
CLI result: LintSucceeded
----------
